+ Added revision id to dynamics js imports + Fixed an overflow issue with autocomplete dialog
git-svn-id: http://agilefant.googlecode.com/svn/trunk@2967 29784df9-99d5-7e28-3e6c-ac1830307ffc

--- a/web/static/css/autocomplete.css
+++ b/web/static/css/autocomplete.css
@@ -7,6 +7,10 @@
   overflow: visible !important;  
 }
 
+.autocomplete-dialog div.ui-dialog-content {
+  overflow: visible !important;  
+}
+
 .autocomplete-searchBoxContainer {
   width: 100%;
   border-bottom: 1px solid #ccc;
